Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36759

QTextEngine: text is drawn with wrong font/size when using input method

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.3.0
    • 5.3.0
    • GUI: Text handling
    • None
    • 8e57ad1a270df164cebcac7b0e2923eac6df9e37

    Description

      Change f864bda "Get rid of SpecialData::addFormatIndices" seems to have
      broken input method usage (on iOS, at least). If testing with examples/widgets/richtext/textedit example, starting a new pre-edit string, the whole paragraph will be drawn with a much too large font. When the preedit string is committed, it goes back to normal again.

      Also, before the change you could go up to the menu and increase the font size. This would increase the font size of the whole word under the cursor immediately. Now the word will instead change once you start writing again.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ritt.ks Konstantin Ritt
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes